--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "dependencies": {
     "firebase": "^10.2.0",
+    "howler": "^2.2.3",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.4",
     "vee-validate": "^4.11.1",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
@@ -33,9 +36,11 @@
     "jsdom": "^22.1.0",
     "postcss": "^8.4.28",
     "prettier": "^3.0.0",
+    "rollup-plugin-visualizer": "^5.9.2",
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.6",
+    "vite-plugin-pwa": "^0.16.4",
     "vitest": "^0.33.0"
   }
 }
