--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,11 @@ lerna-debug.log*
 node_modules
 .DS_Store
 dist
+dev-dist
 dist-ssr
 coverage
 *.local
-
+/cypress
 /cypress/videos/
 /cypress/screenshots/
 
