--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "firebase": "^10.2.0",
     "howler": "^2.2.3",
     "nprogress": "^0.2.0",
